[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
clap = { version = "4.0.29", features = ["derive"] }
image-meta = "0.1.2"
lazy_static = "1.4.0"
regex = "1.7.0"
walkdir = "2"
zip = "0.6.3"
