[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
image-meta = "0.1.2"
lazy_static = "1.4.0"
lofty = { version = "0.10.0" }
#lofty = { version = "0.10.0", features = ["id3v2_restrictions"] }
#lofty = { path = "../lofty-rs" }
regex = "1.7.0"
walkdir = "2"
zip = "0.6.3"
